force-app/main/default/objects/custom_create220__c/custom_create220__c.object-meta.xml
<CustomObject>
    <label>Custom created object220</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects220</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>