force-app/main/default/objects/custom_create220__c/fields/custom_create_220field515__c.field-meta.xml
<CustomField>
    <fullName>custom_create_220field515__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 220field515</label>
    <type>Checkbox</type>
</CustomField>