force-app/main/default/objects/custom_create220__c/fields/custom_create_220field536__c.field-meta.xml
<CustomField>
    <fullName>custom_create_220field536__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 220field536</label>
    <type>Checkbox</type>
</CustomField>